fix: fix some layout issues style: add responsive layout and apply  additional styling to different parts of the page refactor: move languages section into contact section feature: addthe "code section""

--- a/css/style.css
+++ b/css/style.css
@@ -16,20 +16,55 @@ body {
 
   font-family: 'Open Sans', sans-serif;
   font-size: 18px;
+  font-weight: 400;
+  color: black;
 }
 
 a {
   text-decoration: none;
 }
 
-/***************Sitewide *****************/
-section {
-  width: 50%;
-  padding: 20px 30px;
+h1,
+h2 {
+  margin: 0;
 }
 
-section.profile {
-  padding-top: 100px;
+h3 {
+  margin-bottom: 10px;
+}
+
+ul {
+  margin: 0;
+}
+
+ul li::marker {
+  color: #da8d2a;
+  font-size: 20px;
+}
+
+hr {
+  width: 100px;
+  border: 1px solid #dfd29a;
+}
+/***************Sitewide *****************/
+section {
+  width: 49%;
+  padding: 20px 30px;
+  border-bottom: 1px solid #aaa;
+}
+
+.section-title,
+.section-subtitle {
+  margin-bottom: 20px;
+  font-size: 21px;
+  font-weight: 600;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  color: #da8d2a;
+}
+
+.section-subtitle {
+  font-size: 17px;
 }
 
 .container {
@@ -40,11 +75,12 @@ section.profile {
 .main-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   padding: 0 20px;
 }
 
 nav.menu {
-  background-color: #e7a958;
+  background-color: #da8d2a;
 }
 
 .menu ul {
@@ -68,14 +104,31 @@ nav.menu {
 
 .menu ul .menu-item a:hover {
   background-color: #fff;
-  color: #e7a958;
+  color: #da8d2a;
+}
+
+/**********Utilities**************/
+.bold {
+  font-weight: bold;
 }
 
 /**********Sections**************/
+
+h1.section-title {
+  font-size: 40px;
+  font-weight: 500;
+}
+
 .profile {
   width: 100%;
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  margin: 40px 0;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background-color: #f2f0ea;
+  border-bottom: 0;
 }
 
 .profile img {
@@ -84,11 +137,80 @@ nav.menu {
 }
 
 footer {
-  background-color: #f1eaca;
+  background-color: #dfd29a;
 }
 
-.portfolio, .disclaimer {
+.projects, .disclaimer, .work {
   width: 100%;
+}
+
+.main-title-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.disclaimer {
+  font-size: 14px;
+  border: 0;
+}
+
+.code-example {
+  color: aquamarine;
+  padding: 30px 0;
+  border-radius: 5px;
+  min-width: min-content;
+  background-color: #312f2f;
+  margin: 0;
+}
+/**********Responsive styles***************/
+/* todo: dodac tu zmniejszona czcionke, gdy ustawie font na body  */
+
+@media screen and (max-width: 866px) {
+  body {
+    font-size: 14px;
+  }
+
+  h1.section-title {
+    font-size: 30px;
+  }
+
+  section {
+    width: 100%;
+    padding: 20px 5px;
+  }
+
+  .section-title {
+    font-size: 18px;
+    
+  }
+
+  .menu ul .menu-item {
+    display: block;
+    padding: 5px 10px;
+  }
+
+  .menu ul .menu-item a {
+    padding: 20px 90px;
+  }
+
+  .profile {
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 50px;
+  }
+
+  .profile img {
+    margin-bottom: 40px;
+  }
+
+  .disclaimer {
+    font-size: 12px;
+  }
+
+  .code-example {
+    font-size: 10px;
+  }
 }
 
 
